# aegis

./: .aegis.yaml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
examples/baseline/: .aegis.catalog.json  .aegis.yaml  README.md  handler.go
packaging/homebrew/: README.md  aegis.rb.tmpl  render-formula.sh
src/: api.rs  cli.rs  config.rs  main.rs  pattern.rs  reporter.rs  scanner.rs
