[package]
name = "aegis-policy"
version = "0.2.0"
edition = "2021"
authors = ["Muhammad Wildan Aldiansyah <aldiwild77@gmail.com>"]
description = "CLI for detecting permission misconfigurations and enforcing custom policy rules across source code and configuration files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mocha-bot/aegis"
readme = "README.md"

keywords = [
    "policy",
    "security",
    "regex",
    "scanner",
    "permissions",
]

categories = [
    "command-line-utilities",
    "development-tools",
]

exclude = [
    ".github/",
    "docs/",
    "examples/",
    ".aegis.yaml",
]

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
walkdir = "2"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
